run issue fixed